fixed nav bar using z-index and added button to details

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -22,4 +22,11 @@
 
 #login-button{
     margin-right: 30px;
+
+}
+
+mat-toolbar{
+    z-index: 900;
+    background-color: white;
+    position: fixed;
 }
